prevent text wrap for party badges

--- a/frontend/src/components/General/PartyBadge/PartyBadge.module.css
+++ b/frontend/src/components/General/PartyBadge/PartyBadge.module.css
@@ -2,6 +2,7 @@
     border-radius: 5px;
     padding: 2px 4px 3px 4px;
     font-weight: 550;
+    white-space: nowrap;
   }
   
   .alp-badge {
